--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,13 @@ node_modules
 dist
 dist-ssr
 *.local
+.env.development
+.env.production
 supabase/.env
 supabase/functions/.env
+supabase/functions/.env.local
+supabase/functions/.env.dev
+supabase/functions/.env.dev.local
 
 # Editor directories and files
 .vscode/*
