--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
+    "dev:local": "vite",
+    "dev:prod": "vite --mode production",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
