--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,4 +1,4 @@
-name: build for playbook
+name: Deploy Dev
 
 on:
   push:
@@ -25,8 +25,9 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build && touch dist/.nojekyll
+        run: npm run build
         env:
+          GITHUB_PAGES: true
           VITE_SUPABASE_URL: ${{ vars.DEV_VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ vars.DEV_VITE_SUPABASE_ANON_KEY }}
 
@@ -35,3 +36,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          publish_branch: gh-pages
